--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ mirror = False
 n_augmented_images = 4
 test_fraction = 0.1
 transformation_params = (0.1, 0.1, 0.1, 15)
+base_dataset_dir = ./data/images/
 data_preprocessing_output_dir = ./data/images_augmented/
 train_dirs = ./data/images/LFPW/trainset/, ./data/images/HELEN/trainset/, ./data/images/AFW/
 train_csv = ./data/train.csv
@@ -38,21 +39,18 @@ gpu = True
 mirror = True
 n_augmented_images = 4
 train_csv = ./data/train_augmented.csv
-save_model_to = ./data/models/CFPD/github_denemeler/
+save_model_to = ./data/models/CFPD/model1/
 
-[corefan]
+[test]
 color = False
-num_epochs = 1
+num_epochs = 2
 batch_size = 64
-learning_rate = 0.001
-n_io_points = 5
-n_units = 512
-len_f_vector = 512
-parts_order = chin, eyebrows, eyes, nose, mouth
+learning_rate = 0.01
 shuffle = True
 num_workers = 0
 gpu = True
 mirror = True
-n_augmented_images = 15
-train_csv = ./data/train.csv
-save_model_to = ./data/models/COREFAN/test_timing/
+n_augmented_images = 4
+train_dirs = ./data/images/deneme
+train_csv = ./data/train_augmented.csv
+save_model_to = ./data/models/CFPD/tests/
